--- a/package.json
+++ b/package.json
@@ -5,11 +5,26 @@
   "main": " ",
   "dependencies": {
     "aws-sdk": "^2.7.13",
-    "serverless": "^1.3.0"
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0",
+    "serverless": "^1.3.0",
+    "serverless-client-s3": "git+https://github.com/kevzettler/serverless-client-s3.git#serverless_1.0_beta_compatibility"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "static-react": "^3.2.0",
+    "webpack": "^1.14.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack -d --watch",
+    "build": "webpack -p"
   },
   "author": "Chen Li",
   "license": "ISC"
