--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,5 @@
 {
-    "presets" : ["es2015", "react"]
+    "presets" : ["es2015", "react", "stage-0"],
+    "plugins": [["import", { libraryName: "antd", style: "css" }]]
 }
+
