--- a/package.json
+++ b/package.json
@@ -4,15 +4,27 @@
   "description": "A social app for github users",
   "main": " ",
   "dependencies": {
+    "antd": "^2.5.2",
     "aws-sdk": "^2.7.13",
     "babel-loader": "^6.2.10",
+    "babel-plugin-import": "^1.1.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "css-loader": "^0.26.1",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "rc-queue-anim": "^0.12.6",
+    "rc-scroll-anim": "^0.6.1",
+    "rc-tween-one": "^0.11.11",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "redux": "^3.6.0",
+    "semantic-ui-react": "^0.62.3",
     "serverless": "^1.3.0",
-    "serverless-client-s3": "git+https://github.com/kevzettler/serverless-client-s3.git#serverless_1.0_beta_compatibility"
+    "serverless-client-s3": "git+https://github.com/kevzettler/serverless-client-s3.git#serverless_1.0_beta_compatibility",
+    "style-loader": "^0.13.1"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
