--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "css-loader": "^0.26.1",
+    "firebase": "^3.6.4",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "rc-queue-anim": "^0.12.6",
