--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "semantic-ui-react": "^0.62.3",
     "serverless": "^1.3.0",
     "serverless-client-s3": "git+https://github.com/kevzettler/serverless-client-s3.git#serverless_1.0_beta_compatibility",
