--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "css-loader": "^0.26.1",
+    "es6-promise": "^4.0.5",
     "firebase": "^3.6.4",
+    "isomorphic-fetch": "^2.2.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "rc-queue-anim": "^0.12.6",
@@ -31,6 +33,7 @@
   "devDependencies": {
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
+    "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "static-react": "^3.2.0",
