--- a/serverless/serverless.yml
+++ b/serverless/serverless.yml
@@ -7,8 +7,8 @@ service: GitMax
 provider:
   name: aws
   runtime: nodejs4.3
-  stage: prod
-#  stage: dev
+#  stage: prod
+  stage: dev
   region: us-west-2
 
 # you can add statements to the Lambda function's IAM Role here
