--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
     "presets" : ["es2015", "react", "stage-0"],
-    "plugins": [["import", { libraryName: "antd", style: "css" }]]
+    "plugins": [["import", { libraryName: "antd", style: "css" }]],
 }
 
