--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "react-spinkit": "^1.1.11",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "serverless": "^1.3.0",
