--- a/package.json
+++ b/package.json
@@ -6,15 +6,8 @@
   "dependencies": {
     "antd": "^2.5.2",
     "aws-sdk": "^2.7.13",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-import": "^1.1.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "css-loader": "^0.26.1",
     "es6-promise": "^4.0.5",
     "isomorphic-fetch": "^2.2.1",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
     "rc-queue-anim": "^0.12.6",
     "rc-scroll-anim": "^0.6.1",
     "rc-tween-one": "^0.11.11",
@@ -26,16 +19,20 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "serverless": "^1.3.0",
-    "serverless-client-s3": "git+https://github.com/kevzettler/serverless-client-s3.git#serverless_1.0_beta_compatibility",
-    "style-loader": "^0.13.1"
+    "serverless-client-s3": "git+https://github.com/kevzettler/serverless-client-s3.git#serverless_1.0_beta_compatibility"
   },
   "devDependencies": {
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.1",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-import": "^1.1.0",
     "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "css-loader": "^0.26.1",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "static-react": "^3.2.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
   },
   "scripts": {
