Adding test scripts

--- a/serverless/serverless.yml
+++ b/serverless/serverless.yml
@@ -99,6 +99,9 @@ functions:
           method: get
           cors: true
 
+  addingUsersToTest:
+    handler: test.addingUsersToTest
+    timeout: 60
 
 # 当前实用的resource - you can add CloudFormation resource templates here
 
