--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "rc-tween-one": "^0.11.11",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-preload": "^0.5.0",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-spinkit": "^1.1.11",
@@ -37,7 +38,9 @@
   },
   "scripts": {
     "dev": "webpack -d --watch",
-    "build": "webpack -p"
+    "build": "webpack -p",
+    "host": "cd client && firebase serve -p 5010",
+    "deploy-prod": "sls deploy --stage production"
   },
   "author": "Chen Li",
   "license": "ISC"
