--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A social app for github users",
   "main": " ",
   "dependencies": {
-    "antd": "^2.5.2",
+    "antd": "^2.11.1",
     "aws-sdk": "^2.7.13",
     "es6-promise": "^4.0.5",
     "isomorphic-fetch": "^2.2.1",
@@ -17,6 +17,7 @@
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-spinkit": "^1.1.11",
+    "recompose": "^0.23.5",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "serverless": "^1.3.0",
