--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "gitmax",
+  "name": "Clevo",
   "version": "0.1.0",
-  "description": "A social app for github users",
+  "description": "An awesome voice analytics tool for sales teams",
   "main": " ",
   "dependencies": {
     "antd": "^2.11.1",
     "aws-sdk": "^2.7.13",
     "es6-promise": "^4.0.5",
     "isomorphic-fetch": "^2.2.1",
-    "rc-queue-anim": "^0.12.6",
-    "rc-scroll-anim": "^0.6.1",
-    "rc-tween-one": "^0.11.11",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-particles-js": "^1.5.0",
     "react-preload": "^0.5.0",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
-    "react-spinkit": "^1.1.11",
     "recompose": "^0.23.5",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
-    "serverless": "^1.3.0",
-    "serverless-client-s3": "git+https://github.com/kevzettler/serverless-client-s3.git#serverless_1.0_beta_compatibility"
+    "serverless": "^1.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
