--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "antd": "^2.11.1",
     "aws-sdk": "^2.7.13",
+    "brain": "^0.7.0",
     "es6-promise": "^4.0.5",
     "isomorphic-fetch": "^2.2.1",
+    "mimir": "0.0.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-particles-js": "^1.5.0",
